--- a/.harness/pipelines/testAws.yaml
+++ b/.harness/pipelines/testAws.yaml
@@ -19,6 +19,11 @@ pipeline:
             deployToAll: false
             infrastructureDefinitions:
               - identifier: infraAws
+                inputs:
+                  identifier: infraAws
+                  type: SshWinRmAws
+                  spec:
+                    credentialsRef: <+input>
           execution:
             steps:
               - step:
