Update pipeline testAws

--- a/.harness/pipelines/testAws.yaml
+++ b/.harness/pipelines/testAws.yaml
@@ -23,7 +23,11 @@ pipeline:
                   identifier: infraAws
                   type: SshWinRmAws
                   spec:
+                    connectorRef: <+input>
                     credentialsRef: <+input>
+                    region: <+input>
+                    awsInstanceFilter:
+                      tags: <+input>
           execution:
             steps:
               - step:
