--- a/.harness/inpG1.yaml
+++ b/.harness/inpG1.yaml
@@ -17,3 +17,5 @@ inputSet:
                 type: "Http"
                 spec:
                   url: "https://b.m"
+                  requestBody: "bukbj"
+                timeout: "10m"
