Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -22,6 +22,6 @@ pipeline:
                     method: GET
                     headers: []
                     outputVariables: []
-                    requestBody: <+input>
+                    requestBody: khbb
                   timeout: <+input>
         tags: {}
