--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -23,5 +23,5 @@ pipeline:
                     headers: []
                     outputVariables: []
                     requestBody: khbb
-                  timeout: <+input>
+                  timeout: 10m
         tags: {}
