--- a/.harness/inpG1.yaml
+++ b/.harness/inpG1.yaml
@@ -16,4 +16,6 @@ inputSet:
                 identifier: "stp1"
                 type: "Http"
                 spec:
-                  url: "https://b.m"
+                  method: "GET"
+                  requestBody: "egrf"
+                timeout: "10m"
