--- a/.harness/inpG2.yaml
+++ b/.harness/inpG2.yaml
@@ -17,3 +17,6 @@ inputSet:
                 type: "Http"
                 spec:
                   url: "https://m.n"
+                  method: "GET"
+                  requestBody: "reqg"
+                timeout: "3m"
