Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -19,9 +19,9 @@ pipeline:
                   identifier: stp1
                   spec:
                     url: <+input>
-                    method: <+input>
                     headers: []
                     outputVariables: []
                     requestBody: <+input>
+                    method: GET
                   timeout: 10m
         tags: {}
