Update pipeline testAws

--- a/.harness/pipelines/testAws.yaml
+++ b/.harness/pipelines/testAws.yaml
@@ -18,16 +18,12 @@ pipeline:
             environmentRef: testSshEnv
             deployToAll: false
             infrastructureDefinitions:
-              - identifier: infraAws
+              - identifier: infraDev
                 inputs:
-                  identifier: infraAws
-                  type: SshWinRmAws
+                  identifier: infraDev
+                  type: Pdc
                   spec:
-                    connectorRef: <+input>
                     credentialsRef: <+input>
-                    region: <+input>
-                    awsInstanceFilter:
-                      tags: <+input>
           execution:
             steps:
               - step:
