Update inputset inpG2

--- a/.harness/inpG2.yaml
+++ b/.harness/inpG2.yaml
@@ -18,3 +18,5 @@ inputSet:
                 spec:
                   url: "https://m.n"
                   requestBody: "reqg"
+                  method: "GET"
+                timeout: "4m"
