Update inputset inpG1

--- a/.harness/inpG1.yaml
+++ b/.harness/inpG1.yaml
@@ -17,3 +17,5 @@ inputSet:
                 type: "Http"
                 spec:
                   requestBody: "egrf"
+                  method: "GET"
+                timeout: "2m"
