Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -22,6 +22,6 @@ pipeline:
                     headers: []
                     outputVariables: []
                     requestBody: <+input>
-                    method: <+input>
+                    method: GET
                   timeout: <+input>
         tags: {}
