Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -23,5 +23,5 @@ pipeline:
                     outputVariables: []
                     requestBody: <+input>
                     method: GET
-                  timeout: <+input>
+                  timeout: 10m
         tags: {}
