--- a/.harness/inpG3.yaml
+++ b/.harness/inpG3.yaml
@@ -17,3 +17,5 @@ inputSet:
                 type: "Http"
                 spec:
                   url: "https://b.m"
+                  method: "GET"
+                timeout: "10m"
