Update inputset inpG3

--- a/.harness/inpG3.yaml
+++ b/.harness/inpG3.yaml
@@ -18,4 +18,5 @@ inputSet:
                 spec:
                   url: "https://b.m"
                   method: "GET"
+                  requestBody: "jhv"
                 timeout: "10m"
