--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -22,6 +22,6 @@ pipeline:
                     headers: []
                     outputVariables: []
                     method: <+input>
-                    requestBody: erg
-                  timeout: 10m
+                    requestBody: <+input>
+                  timeout: <+input>
         tags: {}
