Update inputset inpG1

--- a/.harness/inpG1.yaml
+++ b/.harness/inpG1.yaml
@@ -18,3 +18,5 @@ inputSet:
                 spec:
                   url: "https://b.m"
                   method: "GET"
+                  requestBody: "req"
+                timeout: "10m"
