Update inputset inpG2

--- a/.harness/inpG2.yaml
+++ b/.harness/inpG2.yaml
@@ -18,3 +18,4 @@ inputSet:
                 spec:
                   url: "https://m.n"
                   method: "GET"
+                timeout: "2m"
