--- a/.harness/inpG2.yaml
+++ b/.harness/inpG2.yaml
@@ -18,4 +18,5 @@ inputSet:
                 spec:
                   url: "https://m.n"
                   method: "GET"
+                  requestBody: "req"
                 timeout: "2m"
