Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -23,5 +23,5 @@ pipeline:
                     outputVariables: []
                     method: <+input>
                     requestBody: req
-                  timeout: <+input>
+                  timeout: 9m
         tags: {}
