--- a/.harness/overlayInpG1.yaml
+++ b/.harness/overlayInpG1.yaml
@@ -1,9 +1,11 @@
 overlayInputSet:
   name: overlayInpG1
+  tags: {}
   identifier: overlayInpG1
   orgIdentifier: default
   projectIdentifier: Kapil
   pipelineIdentifier: Eric_Git_Sync
   inputSetReferences:
     - inpG2
-  tags: {}
+    - inpG3
+    - inpG1
