Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -21,7 +21,7 @@ pipeline:
                     headers: []
                     outputVariables: []
                     requestBody: <+input>
-                    url: https://b.m
-                    method: GET
-                  timeout: 1m
+                    url: <+input>
+                    method: <+input>
+                  timeout: <+input>
         tags: {}
