Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -20,8 +20,8 @@ pipeline:
                   spec:
                     headers: []
                     outputVariables: []
-                    requestBody: <+input>
                     url: <+input>
                     method: <+input>
+                    requestBody: ferg
                   timeout: <+input>
         tags: {}
