Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -21,7 +21,7 @@ pipeline:
                     headers: []
                     outputVariables: []
                     method: <+input>
-                    requestBody: ferg
-                    url: https://b.m
-                  timeout: 1m
+                    requestBody: <+input>
+                    url: <+input>
+                  timeout: <+input>
         tags: {}
