Update inputset test

--- a/.harness/test.yaml
+++ b/.harness/test.yaml
@@ -17,3 +17,6 @@ inputSet:
                 type: "Http"
                 spec:
                   method: "GET"
+                  requestBody: "req"
+                  url: "https://b.m"
+                timeout: "10m"
