--- a/.harness/tesInp.yaml
+++ b/.harness/tesInp.yaml
@@ -17,3 +17,6 @@ inputSet:
                 type: "Http"
                 spec:
                   method: "GET"
+                  requestBody: "req"
+                  url: "https://b.v"
+                timeout: "2m"
