Update pipeline Eric Git Sync

--- a/.harness/pipelines/Eric_Git_Sync.yaml
+++ b/.harness/pipelines/Eric_Git_Sync.yaml
@@ -23,5 +23,5 @@ pipeline:
                     requestBody: <+input>
                     url: <+input>
                     method: GET
-                  timeout: 1m
+                  timeout: <+input>
         tags: {}
