Update inputset inpSetDemo1

--- a/.harness/inpSetDemo1.yaml
+++ b/.harness/inpSetDemo1.yaml
@@ -18,3 +18,4 @@ inputSet:
                 spec:
                   requestBody: "req"
                   url: "https://google.com"
+                timeout: "9m"
