--- a/.harness/inpSetDemo2.yaml
+++ b/.harness/inpSetDemo2.yaml
@@ -17,3 +17,4 @@ inputSet:
                 type: "Http"
                 spec:
                   url: "https://github.com"
+                timeout: "10m"
